--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,13 @@
+2012-06-22  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Support higher-resolution time stamps (Bug#9000).
+	* Makefile.in (LIB_CLOCK_GETTIME): New macro.
+	(profile${EXEEXT}): Use it.
+	* profile.c: Include inttyeps.h, intprops.h.
+	(time_string): Size conservatively; do not guess size.
+	(get_time): Now prints nanoseconds.
+	(gettimeofday): Remove replacement function; gnulib now does this.
+
 2012-06-08  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* make-docfile.c (search_lisp_doc_at_eol): Unget last read
