--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-23  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* minibuffer.el (completion--twq-try): Try to fail more gracefully when
+	the requote function doesn't work properly (bug#11714).
+
 2012-06-23  Glenn Morris  <rgm@gnu.org>
 
 	* pcmpl-rpm.el (pcmpl-rpm-packages): Give status messages.
