--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-23  Chong Yidong  <cyd@gnu.org>
+
+	* progmodes/python.el (python-skeleton-define): Mark abbrevs as
+	system abbrevs.
+
+	* ansi-color.el (ansi-color-apply-on-region): Doc fix.
+
 2012-06-23  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/cl-macs.el (cl--make-usage-args): Handle improper lists
