--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-23  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in (COMPILE_FIRST): Synch with changes in revno:108688.
+
 2012-06-23  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* help-fns.el (describe-variable): Don't croak when doc is not found.
