Avoid compiler warnings in comparing time_t.
 src/dispnew.c (sit_for, Fsleep_for):
 src/keyboard.c (kbd_buffer_get_event):
 src/process.c (Faccept_process_output): Avoid compiler warnings when
 comparing a 32-bit time_t with a 64-bit INTMAX_MAX.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-23  Eli Zaretskii  <eliz@gnu.org>
+
+	* dispnew.c (sit_for, Fsleep_for):
+	* keyboard.c (kbd_buffer_get_event):
+	* process.c (Faccept_process_output): Avoid compiler warnings when
+	comparing a 32-bit time_t with a 64-bit INTMAX_MAX.
+
 2012-06-23  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in: Update dependencies.
