--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-24  Leo Liu  <sdl.web@gmail.com>
+
+	* vc/diff-mode.el (diff-file-prev/next): Fix typo.
+
 2012-06-23  Leo Liu  <sdl.web@gmail.com>
 
 	* textmodes/enriched.el (enriched-next-annotation):
