--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-06-24  Leo Liu  <sdl.web@gmail.com>
 
+	* net/rcirc.el (rcirc): Avoid error when process-contact returns t.
+
 	* vc/diff-mode.el (diff-file-prev/next): Fix typo.
 
 2012-06-23  Leo Liu  <sdl.web@gmail.com>
